Optimized using ChatGPT